Add multi-platform deploy scripts and Linux/Windows SWT fragments
Replace single deploy-geocraft.sh with platform-specific scripts:
- deploy-geocraft-macosx.sh (macOS .app bundle with Rosetta launcher)
- deploy-geocraft-linux.sh (flat directory with bash launcher)
- deploy-geocraft-windows.sh (flat directory with .bat launcher)
- deploy-geocraft-common.sh (shared plugin-copying logic)

Add Eclipse 3.5.1 Delta Pack SWT/launcher fragments for Linux GTK
x86_64 and Windows Win32 x86_64 to the target platform. Each deploy
script filters to only include the SWT fragment for its target platform.

Update Claude skill to support deploying for any or all platforms.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>